added first set of images

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -101,6 +101,12 @@ body {
   column-gap: 0;
 }
 
+.image-parent {
+  background-color: $grey;
+  /* max-width: 400px;
+  min-height: 300px; */
+}
+
 .galleryimages img {
   width: 100%;
 }
