--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,9 +43,9 @@ body {
 /*------------hero section-------------------------------------------*/
 
 #hero-image {
-  height: 600px;
+  height: calc(100vh + 250px);
   width: 100%;
-  background: url("../images/image19.jpeg");
+  background: url("../images/holly10.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -63,21 +63,21 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    height: 600px;
+    height: 100vh;
     width: 100%;
     opacity: 1;
     transition: .5s ease;
     background-color: #343a407d;
  } */
 
-    @keyframes hero-zoom {
+    /* @keyframes hero-zoom {
   from {
     transform: scale(1);
   }
   to {
-    transform: scale(1.4);
+    transform: scale(1.2);
   }
-}
+} */
 
 .hero-title{
   color: #fff;
