add pawprint background again

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700");
 
-body,html {
+html {
     height: 100%;
 }
 /*------------Header section------------------------------------------*/
